# organixm

./: default.nix  license.txt  readme.md
patched/nixos/lib/: make-disk-image.nix
tools/: Cargo.toml
tools/src/: lib.rs  slogextra.rs
tools/templates/: grub_one.conf  grub_two.conf
