[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.65"
askama = "0.11.1"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
hhmmss = "0.1.0"
rust-s3 = { git = 'https://github.com/durch/rust-s3', branch = 'master', features = [
    "sync",
    "sync-native-tls",
], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
slog = "2.7.0"
sloggers = "2.1.1"
tempfile = "3.3.0"
zstd = "0.11.2"
